--- a/gb/23/1/17/n13909495.md
+++ b/gb/23/1/17/n13909495.md
@@ -1,57 +1,44 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>第三十八届国际钢琴音乐比赛（ IYAPC ）招生</h2>
-
 <h6></h6>
 <hr>
-	<p>【大纪元2023年01月18日讯】第三十八届<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%9B%BD%E9%99%85%E9%92%A2%E7%90%B4%E9%9F%B3%E4%B9%90%E6%AF%94%E8%B5%9B.md#1">国际钢琴音乐比赛</a>， 开始全国<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%8B%9B%E7%94%9F.md#1">招生</a>六岁到三十岁<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%9D%92%E5%B0%91%E5%B9%B4.md#1">青少年</a>及<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%9D%92%E5%B9%B4.md#1">青年</a>学生。不分国籍，分五组比赛，奖金奖品奖状，专业者评语单及音乐演奏机会。除自选西洋曲目，指定曲目有李重光的 “快乐舞蹈”， 陈纳的“双声部创意曲”, 王建中的“大理妹妹”和“来日相逢”，张黎莉的“大自然探险”，“网路之行”及陈明琪的“前奏曲及赋格”。支支有丰富的旋律,节奏及艺术创作灵感，均可增加学习的兴趣及进步。</p>
+	<p>【大纪元2023年01月18日讯】第三十八届国际钢琴音乐比赛， 开始全国招生六岁到三十岁青少年及青年学生。不分国籍，分五组比赛，奖金奖品奖状，专业者评语单及音乐演奏机会。除自选西洋曲目，指定曲目有李重光的 “快乐舞蹈”， 陈纳的“双声部创意曲”, 王建中的“大理妹妹”和“来日相逢”，张黎莉的“大自然探险”，“网路之行”及陈明琪的“前奏曲及赋格”。支支有丰富的旋律,节奏及艺术创作灵感，均可增加学习的兴趣及进步。</p>
 <p>四月网上初赛。六月 二十二日到二十五日, 2023 在华府美国天主教大学举行现埸决赛。此为经过过去两年半网上比赛，首次现埸比赛， 公开演出，免费招待观众。盼踊跃参加， 推广中西文化， 增进音乐学习情趣 ! 报名表及指定曲表格请查 <ahref="http://www.musicalartsinternational.org/IYAPC">www.musicalartsinternational.org/IYAPC</a></p>
-<p><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%9B%BD%E9%99%85%E9%92%A2%E7%90%B4%E9%9F%B3%E4%B9%90%E6%AF%94%E8%B5%9B.md#1">国际钢琴音乐比赛</a> （The International Young Artist Piano Competition， IYAPC ）由张黎莉（ Li-Ly Chang ）于1986年在美国马里兰州创办，目的是推广华人作曲家的音乐，促进东西方之间的文化交流。请电话联络（301）933 3715。</p>
+<p>国际钢琴音乐比赛 （The International Young Artist Piano Competition， IYAPC ）由张黎莉（ Li-Ly Chang ）于1986年在美国马里兰州创办，目的是推广华人作曲家的音乐，促进东西方之间的文化交流。请电话联络（301）933 3715。</p>
 <p>&nbsp;</p>
 <p>责任编辑：肖捷</p>
 	
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/26/n13958826.md#1">营销总监为神韵着迷 感谢神韵艺术家的付出</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/26/n13958855.md#1">企业家二度观神韵 “感谢艺术家的奉献”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/26/n13958860.md#1">瑜伽馆老板：神韵传递重要的信息</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/26/n13958875.md#1">大陆移民观神韵感动落泪：很值得来看</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/26/n13958880.md#1">画家赞神韵“唤起人的善念”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/26/n13958890.md#1">公司老板：神韵演出富有教育意义</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/7/12/13/n1940334.md#1">第23届国际钢琴音乐比赛即日起接受报名</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/6/30/n10525503.md#1">第33届国际钢琴音乐比赛   令资深评委赞叹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/19/7/11/n11379084.md#1">第三十四届国际钢琴音乐比赛庆典</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/7/13/n12253478.md#1">首次线上举办 第35届国际钢琴音乐比赛落幕</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/25/n10086108.md#1" target="_blank">郑兢业：人吃与吃人（三）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/8/n11708865.md#1" target="_blank">香港立法会议员胡志伟：很佩服法轮功学员</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/20/2/10/n11858311.md#1" target="_blank">王友群：习仲勋等支持气功研究的内幕</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/7/24/n11406694.md#1" target="_blank">美国会吁中共释放法轮功学员 邓翠苹女儿感谢</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/18/n13953285.md#1">独家：“神的指引” 中领馆员工成功出逃</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/20/n13954628.md#1">【百年真相】晚年街头乞讨 大师叶企孙往事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/19/n13953674.md#1">春分一刻千金难买 你要知道的春分大小事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/17/n13952068.md#1">前蜀异人精通异术 预测他人命数奇准</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957926.md#1">【未解之谜】科学证明 轮回真的存在？！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/25/n13958465.md#1">【新唐人大视野】密谋阻习连任？前上将传判死缓</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/25/n13958403.md#1">【财商天下】德勤遭重罚 中共过河拆桥？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957926.md#1">【未解之谜】科学证明 轮回真的存在？！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/25/n13958480.md#1">中共财政吃紧 多地机关事业单位清理编外人员</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/25/n13958380.md#1">西方品牌撤出 中国车填空 俄车主：质量太差</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/25/n13958502.md#1">消息：中共驻日大使离任前求见岸田遭拒</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957867.md#1">胡歌首谈当爸感受：第一次抱女儿很怕碰伤她</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/26/n13959128.md#1">微博之夜红毯叫停 李冰冰等候场明星被特警赶走</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/25/n13957965.md#1">TVB宣布裁员近200人 终止未达预期收视节目</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/25/n13958372.md#1">《名侦探柯南 灰原哀物语?黑铁的神秘列车?》影评：古色古香的列车 成正邪大战舞台</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/26/n13958702.md#1">《天道》演员齐聚开镜 林秀玲相隔12年归队演出</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/25/n13958305.md#1">蓝莓、豆角农药最多！美12种污染最重蔬果出炉</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957502.md#1">预防心脏病从生活中做起 注意4个早期征兆</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957852.md#1">专家建议：远离5类食品 以防脱发</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/23/n13956575.md#1">木制家具经典不败 5优点值得你投资布置居家</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/26/n13958779.md#1">哈佛85年研究揭示快乐和健康生活的秘密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300810.md#1">【未解之谜】日本最强预言：三千世界面临大清洗 人神历劫</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/30/n14301175.md#1">一两黄金一块砖 紫禁城“金砖”怎地这么高贵？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/18/n14293177.md#1">《货郎图》——有趣的故事传承</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300734.md#1">目睹临终病患与亡者对话 护士质疑无神论</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303783.md#1">【未解之谜】美国日全食开启灾难之门 比格斯预言盘点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303407.md#1">按1穴快速止头痛 3类人小心 4习惯要改</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/3/n14303947.md#1">【菁英论坛】中共进入“治脸”时代</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14303069.md#1">【晚间新闻】湖南11万人受灾 江浙沪40度高温</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303843.md#1">网曝湖南挂反共横幅者更多细节</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/3/n14304119.md#1">【更新】2024年巴黎奥运奖牌榜 8月3日</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14303130.md#1">贾玲瘦身大变样 亮相巴黎奥运满脸褶子引关注</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303894.md#1">携妻女游日本 胡歌与女儿互动同框首曝光</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/3/n14304255.md#1">《心的温度》上映首日 2名观众 票房仅91元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304297.md#1">郑中基突开除经理人 宣布：下月高雄唱完后离开</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304294.md#1">知名摇滚天团“史密斯飞船”巡演中宣布退休</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279677.md#1">抢救落发  三招丰厚发量</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300801.md#1">研究：常见家用化学品会攻击关键脑细胞</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/26/n14298933.md#1">常常咳嗽吗？2食疗帮你摆脱反复久咳</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304411.md#1">感觉脚痛或疲劳？ 可能是你的凉鞋害的</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/31/n14302344.md#1">纳豆抗衰老、防血栓 五种人慎食</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/1/17/n13909495.htm">第三十八届国际钢琴音乐比赛（ IYAPC ）招生</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/1/17/n13909495.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/1/17/n13909495.htm">第三十八届国际钢琴音乐比赛（ IYAPC ）招生</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/1/17/n13909495.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
